--- a/SkiddleEvents/Base.lproj/Main.storyboard
+++ b/SkiddleEvents/Base.lproj/Main.storyboard
@@ -1,24 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xff-IY-uuH">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Events List Table View Controller-->
+        <scene sceneID="Csn-AN-hEQ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="mP8-kY-nxn" customClass="EventsListTableViewController" customModule="SkiddleEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JdJ-iF-jGN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventListViewCell" rowHeight="152" id="Kgq-yi-wZ1" customClass="EventListViewCell" customModule="SkiddleEvents" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="152"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kgq-yi-wZ1" id="Nuj-57-hkl">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="151.66666666666666"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZQ0-OV-dTW">
+                                            <rect key="frame" x="24" y="26" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="795-eT-Eug"/>
+                                                <constraint firstAttribute="width" constant="100" id="Tme-zM-6DB"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbA-sC-wv5">
+                                            <rect key="frame" x="132" y="26" width="219" height="25.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ZQ0-OV-dTW" firstAttribute="centerY" secondItem="Nuj-57-hkl" secondAttribute="centerY" id="489-SI-ZyY"/>
+                                        <constraint firstItem="ZQ0-OV-dTW" firstAttribute="leading" secondItem="Nuj-57-hkl" secondAttribute="leadingMargin" constant="8" id="Bp7-OD-0Mz"/>
+                                        <constraint firstItem="WbA-sC-wv5" firstAttribute="leading" secondItem="ZQ0-OV-dTW" secondAttribute="trailing" constant="8" id="DW1-hn-nHR"/>
+                                        <constraint firstItem="WbA-sC-wv5" firstAttribute="top" secondItem="Nuj-57-hkl" secondAttribute="topMargin" constant="15" id="FkL-lX-gdo"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="WbA-sC-wv5" secondAttribute="trailing" constant="8" id="x0v-zZ-K4Q"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="eventImageView" destination="ZQ0-OV-dTW" id="bBi-rL-jih"/>
+                                    <outlet property="titleLabel" destination="WbA-sC-wv5" id="GVP-ZN-gYD"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mP8-kY-nxn" id="wHg-1g-juo"/>
+                            <outlet property="delegate" destination="mP8-kY-nxn" id="zRL-Nk-e4g"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="NGe-68-tlX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YUw-bF-3hm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1077.5999999999999" y="133.74384236453201"/>
+        </scene>
+        <!--Display Event View Controller-->
+        <scene sceneID="MCw-v7-cRb">
+            <objects>
+                <viewController id="whY-0Y-IGN" customClass="DisplayEventViewController" customModule="SkiddleEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tkm-j9-Ffq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="NS7-Qh-Cf3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="evp-Bc-n4o"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RxG-BL-wVc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3002" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YXY-tr-qtT">
+            <objects>
+                <navigationController storyboardIdentifier="displayEvents" automaticallyAdjustsScrollViewInsets="NO" id="kYK-2y-0BH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uL0-6C-IE6">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="whY-0Y-IGN" kind="relationship" relationship="rootViewController" id="53Z-eM-R8x"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ewk-4F-IC0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2156" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TXg-3v-uKx">
+            <objects>
+                <navigationController storyboardIdentifier="eventsList" automaticallyAdjustsScrollViewInsets="NO" id="Xff-IY-uuH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7fl-27-QAg">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mP8-kY-nxn" kind="relationship" relationship="rootViewController" id="Vwt-1P-baz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nn7-oy-N3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="257" y="134"/>
         </scene>
     </scenes>
 </document>
