--- a/SkiddleEvents/Base.lproj/Main.storyboard
+++ b/SkiddleEvents/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                         <viewLayoutGuide key="safeArea" id="NS7-Qh-Cf3"/>
                     </view>
                     <navigationItem key="navigationItem" id="evp-Bc-n4o"/>
+                    <connections>
+                        <outlet property="collectionView" destination="jvA-1X-bBy" id="eUa-iF-Mht"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RxG-BL-wVc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -209,12 +212,22 @@
                                         <rect key="frame" x="169" y="327" width="37" height="37"/>
                                         <color key="color" red="0.066666666669999999" green="0.21176470589999999" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </activityIndicatorView>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QBz-9J-v1n">
+                                        <rect key="frame" x="176" y="333" width="22" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="5Nk-1v-c6k"/>
+                                            <constraint firstAttribute="height" constant="25" id="cmC-Hn-1xj"/>
+                                        </constraints>
+                                        <state key="normal" image="Refresh"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="zje-xv-wNy" firstAttribute="leading" secondItem="mF6-GB-oit" secondAttribute="leading" constant="20" id="AIR-nk-NJn"/>
                                     <constraint firstItem="zje-xv-wNy" firstAttribute="centerY" secondItem="mF6-GB-oit" secondAttribute="centerY" id="Bdz-Xb-MNE"/>
+                                    <constraint firstItem="QBz-9J-v1n" firstAttribute="centerX" secondItem="mF6-GB-oit" secondAttribute="centerX" id="CoO-E2-4uC"/>
                                     <constraint firstItem="zje-xv-wNy" firstAttribute="centerX" secondItem="mF6-GB-oit" secondAttribute="centerX" id="Vwb-k6-pgW"/>
+                                    <constraint firstItem="QBz-9J-v1n" firstAttribute="centerY" secondItem="mF6-GB-oit" secondAttribute="centerY" id="cS7-TK-K7M"/>
                                     <constraint firstItem="FLR-Wl-ah3" firstAttribute="centerX" secondItem="mF6-GB-oit" secondAttribute="centerX" id="dDh-iK-fje"/>
                                     <constraint firstItem="FLR-Wl-ah3" firstAttribute="centerY" secondItem="mF6-GB-oit" secondAttribute="centerY" id="gbZ-b9-0rv"/>
                                     <constraint firstAttribute="bottom" secondItem="O8b-1N-M3D" secondAttribute="bottom" id="nGY-SN-oDB"/>
@@ -239,6 +252,7 @@
                         <outlet property="activityIndicator" destination="FLR-Wl-ah3" id="SJx-ya-sIl"/>
                         <outlet property="collectionView" destination="O8b-1N-M3D" id="x5j-C9-SuK"/>
                         <outlet property="noLocationLabel" destination="zje-xv-wNy" id="ZIb-ub-QcE"/>
+                        <outlet property="refreshButton" destination="QBz-9J-v1n" id="wMm-cT-wc3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jZq-dj-d1G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -267,5 +281,6 @@
     <resources>
         <image name="Calendar" width="18" height="21"/>
         <image name="Location" width="19" height="26"/>
+        <image name="Refresh" width="22" height="25"/>
     </resources>
 </document>
